fixes inputs border-radius on mobile

--- a/css/site.styl
+++ b/css/site.styl
@@ -202,6 +202,8 @@ input
   -webkit-appearance: none
   -moz-appearance: none
   border: 0
+  -webkit-border-radius: 0
+  -moz-border-radius: 0
   border-radius: 0
   background: none
   font-family: $font-luculent-regular
